<resources>
    <!--App-->
    <string name="app_name">分包方</string>
    <string name="app_name_en">LaoLiXin</string>
    <!--MainActivity-->
    <string name="tab_bar_home">首页</string>
    <string name="tab_bar_verify">人员报备</string>
    <string name="tab_bar_warning">预警信息</string>
    <string name="tab_bar_idle">劳力闲置</string>
    <string name="tab_bar_view_declaration">查看申报</string>
    <string name="tips_badge_removed">已删除</string>
    <string name="loading_text">loading...</string>
    <string name="net_crash_text">服务器异常!</string>
    <string name="loading_login">正在登录中...</string>
    <string name="net_crash_login">服务器异常，登陆失败!</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="zhi_f">支付</string>
    <string name="app_tip">提示</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结</string>
</resources>
